fixed some bugs with retina display overflowing played with zoom transform for webpages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,13 @@
    src:font-url('Quadon/Quadon-Medium.otf');
 }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 2), 
+only screen and (min-device-pixel-ratio: 2) {
+  body {
+    transform-origin: -10% -10%;
+  }
+}
+
 .section {
   /* the important one */
   background-size: 100%;
@@ -44,10 +51,10 @@
    } 
 }
 
-#section4 {
+.custom4 {
   background-image: image-url('header.png');
-    background-size: 2000px;
-    height: 310px;
+  background-size: 2000px;
+  height: 310px;
      @media screen and  (min-width: 1900px) {
      background-size: 3000px;
    }
@@ -259,13 +266,12 @@
   width: 500px;
   color: white;
   font-size: 45px;
-  margin-top: 80px;
-  margin-left: 200px;
+  padding: 80px 0;
+  margin: 0 0 0 200px;
   font-family: 'Quadon';
 }
 
 #graystrip {
-  margin-top: 80px;
   width: 100%;
   height: 100px;
 }
